<resources>
    <string name="app_name">Cfolio</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_firstname_hint">First name</string>
    <string name="login_lastname_hint">Last name</string>
    <string name="login_retypepassword_hint">Retype password</string>

</resources>